--- a/css/forms.css
+++ b/css/forms.css
@@ -80,7 +80,8 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   -webkit-appearance: none !important;
   -o-appearance: none !important;
   -ms-appearance: none !important;
-  margin: 0; }
+  margin: 0;
+}
 
 input:focus, select:focus, textarea:focus {
   outline: none;
@@ -262,6 +263,7 @@ body {
   padding: 17px 20px;
   box-sizing: border-box;
   font-size: 14px;
+  cursor: pointer;
   font-weight: 700;
   color: #fff;
   text-transform: uppercase;
